--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,9 @@ permissions:
   pages: write # разрешаем перезаписывать github page
   id-token: write # Разрешаем использоловать GITHUB_TOKEN
 
+env:
+  PUBLIC_PATH: /github_actions/
+
 jobs: # Секция jobs определяет этапы процесса
  
   deploy:  # Создаётся одна задача deploy, имя можеть быть любым
